# PhotoProject

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md
cmake/: doxygen.cmake
src/: CMakeLists.txt  Filesystem.cpp  Filesystem.hpp  main.cpp
src/ExifParser/: CMakeLists.txt  ExifParser.cpp  ExifParser.hpp  Exif_Spec.md
src/ExifParser/CppUTests/: CMakeLists.txt  ExifParserTests.cpp
src/ExifParser/gtests/: CMakeLists.txt  ExifParserTests.cpp
